--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
             <li class="menu"><a href="#home" class="active">Home</a></li>
             <li class="menu"><a href="#resume">Resume</a></li>
             <li class="menu"><a href="#portfolio">Portfolio</a></li>
-            <li class="menu"><a href="#experience">Portfolio</a></li>
+            <li class="menu"><a href="#experience">Work Experience</a></li>
             <li class="menu"><a href="#contact">Contact</a></li>
           </ul>
         </nav>
         <div class="social-media">
           <strong>Follow me!</strong>
           <ul>
-            <li><a><i class="fa fa-github fa-2x text-muted"></i></a></li>
-            <li><a><i class="fa fa-facebook fa-2x text-muted"></i></a></li>
+            <li><a href="https://github.com/rvkumar92"><i class="ion-social-github"></i></a></li>
+            <li><a href="https://www.facebook.com/rvkumar92"><i class="ion-social-facebook"></i></a></li>
             <li><a></a></li>
           </ul>
         </div>
@@ -46,15 +46,15 @@
             <li class="menu"><a href="#home" class="active">Home</a></li>
             <li class="menu"><a href="#resume">Resume</a></li>
             <li class="menu"><a href="#portfolio">Portfolio</a></li>
+            <li class="menu"><a href="#experience">Work Experience</a></li>
             <li class="menu"><a href="#contact">Contact</a></li>
           </ul>
         </nav>
         <div class="social-media">
           <strong>Follow me!</strong>
           <ul>
-            <li><a><i class="fa fa-github fa-2x text-muted"></i></a></li>
-            <li><a><i class="fa fa-facebook fa-2x text-muted"></i></a></li>
-            <li><a></a></li>
+            <li><a href="https://github.com/rvkumar92"><i class="ion-social-github"></i></a></li>
+            <li><a href="https://www.facebook.com/rvkumar92"><i class="ion-social-facebook"></i></a></li>
           </ul>
         </div>
       </header>
