--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Resume - Vijay</title>
     <link rel="stylesheet" href="styles.css" />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet" />
-    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" />
+    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" />
-    <link rel="stylesheet" href="bower_components/jqcloud2/dist/jqcloud.min.css"/>
   </head>
   <body>
     <div class="container">
